--- a/index.html
+++ b/index.html
@@ -21,7 +21,37 @@
     </nav>
     <section id="about">
         <h2>About Me</h2>
-        <p>Write something about yourself here.</p>
+        <p>With nine years of hands-on experience in the computing industry across diverse
+environments, wealth of expertise is brought as IT professional. Recognised for adept
+problem-solving skills, reliability, and efficiency are prioritised in resolving complex
+issues. As excellent communicator, there is proven track record of explaining
+complex procedures in user-friendly manner, facilitating effective problem resolution
+through various communication channels.
+The ability to thrive both independently and within team settings underscores the
+commitment to consistently delivering high-quality IT services. Proficiency in IT
+infrastructure management, including hardware and software troubleshooting, is
+complemented by excellence in building and maintaining computer systems.
+Furthermore, volunteer work with Refugee Council demonstrates self-motivation,
+trustworthiness, and capacity to work effectively in diverse environments.
+In addition to practical skills, currently pursuing Master in Enterprise IT Management,
+specialising in Security and Risk Management, Information Technology Service
+Management, Project Management, Data Science, Cloud Operations and
+Management, Research Methods and Professional Practice, and Computing
+Projects. This coursework enhances proficiency in IT management, risk assessment,
+project coordination, data analysis, cloud computing, and research methodologies,
+positioning to address complex IT challenges and contribute effectively to
+organisational objectives.
+The professional journey is complemented by solid educational background,
+including a BTEC Level 3 NVQ Diploma in Professional Competence for IT and
+Telecoms Professionals. Currently working towards achieving certificate in Microsoft
+365 Fundamentals (MS-900), further enriching skill set and keeping abreast of industry
+trends.
+Driven by passion for technology, dedication to continuous learning and
+development ensures remaining at forefront of advancements in IT field. With keen
+interest in football, tennis, and table tennis, healthy work-life balance is maintained
+while staying connected to hobbies.
+Excitement about opportunity to leverage experience, skills, and ongoing education
+to contribute to success of forward-thinking organization in the IT sector is evident..</p>
     </section>
     <section id="projects">
         <h2>Projects</h2>
