--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </nav>
     <section id="about">
         <h2>About Me</h2>
-        <p>With nine years of hands-on experience in the computing industry across diverse
+        <p>Nine years of hands-on experience in the computing industry across diverse
 environments, wealth of expertise is brought as IT professional. Recognised for adept
 problem-solving skills, reliability, and efficiency are prioritised in resolving complex
 issues. As excellent communicator, there is proven track record of explaining
