--- a/index.html
+++ b/index.html
@@ -21,37 +21,23 @@
     </nav>
     <section id="about">
         <h2>About Me</h2>
-        <p>Nine years of hands-on experience in the computing industry across diverse
-environments, wealth of expertise is brought as IT professional. Recognised for adept
-problem-solving skills, reliability, and efficiency are prioritised in resolving complex
-issues. As excellent communicator, there is proven track record of explaining
-complex procedures in user-friendly manner, facilitating effective problem resolution
-through various communication channels.
-The ability to thrive both independently and within team settings underscores the
-commitment to consistently delivering high-quality IT services. Proficiency in IT
-infrastructure management, including hardware and software troubleshooting, is
-complemented by excellence in building and maintaining computer systems.
-Furthermore, volunteer work with Refugee Council demonstrates self-motivation,
-trustworthiness, and capacity to work effectively in diverse environments.
-In addition to practical skills, currently pursuing Master in Enterprise IT Management,
-specialising in Security and Risk Management, Information Technology Service
-Management, Project Management, Data Science, Cloud Operations and
-Management, Research Methods and Professional Practice, and Computing
-Projects. This coursework enhances proficiency in IT management, risk assessment,
-project coordination, data analysis, cloud computing, and research methodologies,
-positioning to address complex IT challenges and contribute effectively to
-organisational objectives.
-The professional journey is complemented by solid educational background,
-including a BTEC Level 3 NVQ Diploma in Professional Competence for IT and
-Telecoms Professionals. Currently working towards achieving certificate in Microsoft
-365 Fundamentals (MS-900), further enriching skill set and keeping abreast of industry
-trends.
-Driven by passion for technology, dedication to continuous learning and
-development ensures remaining at forefront of advancements in IT field. With keen
-interest in football, tennis, and table tennis, healthy work-life balance is maintained
-while staying connected to hobbies.
-Excitement about opportunity to leverage experience, skills, and ongoing education
-to contribute to success of forward-thinking organization in the IT sector is evident..</p>
+        <p>I am an IT Project Manager with nine years of hands-on experience in the computing industry, bringing a wealth of expertise in problem-solving, reliability, and efficiency. My proficiency in resolving complex issues and communicating procedures in an accessible manner is well-documented. I excel both independently and within team settings, consistently delivering high-quality IT services.
+Professional Experience
+My expertise encompasses IT infrastructure management, hardware and software troubleshooting, and computer system maintenance. Volunteering with the Refugee Council further demonstrates my self-motivation and capacity to operate effectively in diverse environments.
+Education and Certifications
+Currently, I am pursuing a Master in Enterprise IT Management, specializing in:
+•	Security and Risk Management
+•	Information Technology Service Management
+•	Project Management
+•	Data Science
+•	Cloud Operations and Management
+•	Research Methods and Computing Projects
+This advanced coursework enhances my competencies in risk assessment, project coordination, data analysis, cloud computing, and research methodologies. My educational background includes a BTEC Level 3 NVQ Diploma in Professional Competence for IT and Telecoms Professionals, and I am progressing towards certification in Microsoft 365 Fundamentals (MS-900).
+Continuous Learning
+Driven by a passion for technology and a dedication to continuous learning, I remain at the forefront of advancements in the IT field. I maintain a healthy work-life balance through my interests in football, tennis, and table tennis.
+Looking Ahead
+I am enthusiastic about the opportunity to leverage my experience, skills, and ongoing education to contribute to the success of a forward-thinking organization in the IT sector.
+..</p>
     </section>
     <section id="projects">
         <h2>Projects</h2>
