--- a/index.html
+++ b/index.html
@@ -9,52 +9,23 @@
 <body>
     <header>
         <h1>Welcome to My E-Portfolio</h1>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About Me</a></li>
+                <li><a href="projects.html">Projects</a></li>
+                <li><a href="skills.html">Skills</a></li>
+                <li><a href="experience.html">Experience</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
+        </nav>
     </header>
-    <nav>
-        <ul>
-            <li><a href="#about">About Me</a></li>
-            <li><a href="#projects">Projects</a></li>
-            <li><a href="#skills">Skills</a></li>
-            <li><a href="#experience">Experience</a></li>
-            <li><a href="#contact">Contact</a></li>
-        </ul>
-    </nav>
-    <section id="about">
-        <h2>About Me</h2>
-        <p>I am an IT Project Manager with nine years of hands-on experience in the computing industry, bringing a wealth of expertise in problem-solving, reliability, and efficiency. My proficiency in resolving complex issues and communicating procedures in an accessible manner is well-documented. I excel both independently and within team settings, consistently delivering high-quality IT services.
-Professional Experience
-My expertise encompasses IT infrastructure management, hardware and software troubleshooting, and computer system maintenance. Volunteering with the Refugee Council further demonstrates my self-motivation and capacity to operate effectively in diverse environments.
-Education and Certifications
-Currently, I am pursuing a Master in Enterprise IT Management, specializing in:
-•	Security and Risk Management
-•	Information Technology Service Management
-•	Project Management
-•	Data Science
-•	Cloud Operations and Management
-•	Research Methods and Computing Projects
-This advanced coursework enhances my competencies in risk assessment, project coordination, data analysis, cloud computing, and research methodologies. My educational background includes a BTEC Level 3 NVQ Diploma in Professional Competence for IT and Telecoms Professionals, and I am progressing towards certification in Microsoft 365 Fundamentals (MS-900).
-Continuous Learning
-Driven by a passion for technology and a dedication to continuous learning, I remain at the forefront of advancements in the IT field. I maintain a healthy work-life balance through my interests in football, tennis, and table tennis.
-Looking Ahead
-I am enthusiastic about the opportunity to leverage my experience, skills, and ongoing education to contribute to the success of a forward-thinking organization in the IT sector.
-..</p>
-    </section>
-    <section id="projects">
-        <h2>Projects</h2>
-        <p>Showcase your projects here.</p>
-    </section>
-    <section id="skills">
-        <h2>Skills</h2>
-        <p>List your skills here.</p>
-    </section>
-    <section id="experience">
-        <h2>Experience</h2>
-        <p>Detail your experience here.</p>
-    </section>
-    <section id="contact">
-        <h2>Contact</h2>
-        <p>Provide your contact information here.</p>
-    </section>
+    <main>
+        <section>
+            <h2>Home</h2>
+            <p>Welcome to my e-portfolio! Use the navigation links to explore my work and skills.</p>
+        </section>
+    </main>
     <footer>
         <p>&copy; 2024 Your Name</p>
     </footer>
