--- a/about.html
+++ b/about.html
@@ -43,7 +43,7 @@ I am enthusiastic about the opportunity to leverage my experience, skills, and o
         </section>
     </main>
     <footer>
-        <p>&copy; 2024 Your Name</p>
+        <p>&copy; 2024 Mustafa Hussein</p>
     </footer>
 </body>
 </html>
