--- a/UniversityofEssex.html
+++ b/UniversityofEssex.html
@@ -13,7 +13,7 @@
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About Me</a></li>
-                <li><a href="projects.html">University of Essex</a></li>
+                <li><a href="University of Essex.html">University of Essex</a></li>
                 <li><a href="skills.html">Skills</a></li>
                 <li><a href="experience.html">Experience</a></li>
                 <li><a href="contact.html">Contact</a></li>
@@ -27,7 +27,7 @@
         </section>
     </main>
     <footer>
-        <p>&copy; 2024 Your Name</p>
+        <p>&copy; 2024 Mustafa Hussein</p>
     </footer>
 </body>
 </html>
