--- a/UniversityofEssex.html
+++ b/UniversityofEssex.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Projects</title>
+    <title>University of Essex</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
-        <h1>Projects</h1>
+        <h1>University of Essex</h1>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
