--- a/UniversityofEssex.html
+++ b/UniversityofEssex.html
@@ -22,7 +22,7 @@
     </header>
     <main>
         <section>
-            <h2>Projects</h2>
+            <h2>University of Essex</h2>
             <p>Showcase your projects here.</p>
         </section>
     </main>
