--- a/index.html
+++ b/index.html
@@ -8,15 +8,14 @@
 </head>
 <body>
     <header>
-        <h1>Welcome to My E-Portfolio Mustafa Hussein</h1>
+        <h1>Welcome to My E-Portfolio</h1>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About Me</a></li>
-                <li><a href="University of Essex.html">Projects</a></li>
-                <li><a href="skills.html">Skills</a></li>
-                <li><a href="experience.html">Experience</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li><a href="university.html">University of Essex</a></li>
+                <li><a href="education.html">Education</a></li>
+                <li><a href="cv.html">CV</a></li>
             </ul>
         </nav>
     </header>
@@ -27,7 +26,7 @@
         </section>
     </main>
     <footer>
-        <p>&copy; 2024 Mustafa Hussein</p>
+        <p>&copy; 2024 Your Name</p>
     </footer>
 </body>
 </html>
