--- a/about.html
+++ b/about.html
@@ -13,37 +13,20 @@
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About Me</a></li>
-                <li><a href="University of Essex.html">Projects</a></li>
-                <li><a href="skills.html">Skills</a></li>
-                <li><a href="experience.html">Experience</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li><a href="university.html">University of Essex</a></li>
+                <li><a href="education.html">Education</a></li>
+                <li><a href="cv.html">CV</a></li>
             </ul>
         </nav>
     </header>
     <main>
         <section>
             <h2>About Me</h2>
-            <p>I am an IT Project Manager with nine years of hands-on experience in the computing industry, bringing a wealth of expertise in problem-solving, reliability, and efficiency. My proficiency in resolving complex issues and communicating procedures in an accessible manner is well-documented. I excel both independently and within team settings, consistently delivering high-quality IT services.
-Professional Experience
-My expertise encompasses IT infrastructure management, hardware and software troubleshooting, and computer system maintenance. Volunteering with the Refugee Council further demonstrates my self-motivation and capacity to operate effectively in diverse environments.
-Education and Certifications
-Currently, I am pursuing a Master in Enterprise IT Management, specializing in:
-•	Security and Risk Management
-•	Information Technology Service Management
-•	Project Management
-•	Data Science
-•	Cloud Operations and Management
-•	Research Methods and Computing Projects
-This advanced coursework enhances my competencies in risk assessment, project coordination, data analysis, cloud computing, and research methodologies. My educational background includes a BTEC Level 3 NVQ Diploma in Professional Competence for IT and Telecoms Professionals, and I am progressing towards certification in Microsoft 365 Fundamentals (MS-900).
-Continuous Learning
-Driven by a passion for technology and a dedication to continuous learning, I remain at the forefront of advancements in the IT field. I maintain a healthy work-life balance through my interests in football, tennis, and table tennis.
-Looking Ahead
-I am enthusiastic about the opportunity to leverage my experience, skills, and ongoing education to contribute to the success of a forward-thinking organization in the IT sector.
-.</p>
+            <p>Write something about yourself here.</p>
         </section>
     </main>
     <footer>
-        <p>&copy; 2024 Mustafa Hussein</p>
+        <p>&copy; 2024 Your Name</p>
     </footer>
 </body>
 </html>
