--- a/UniversityofEssex.html
+++ b/UniversityofEssex.html
@@ -13,22 +13,20 @@
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About Me</a></li>
-                <li><a href="University of Essex.html">University of Essex</a></li>
-                <li><a href="skills.html">Skills</a></li>
-                <li><a href="experience.html">Experience</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li><a href="university.html">University of Essex</a></li>
+                <li><a href="education.html">Education</a></li>
+                <li><a href="cv.html">CV</a></li>
             </ul>
         </nav>
     </header>
     <main>
         <section>
             <h2>University of Essex</h2>
-            <p>Showcase your projects here.</p>
+            <p>Details about your time at the University of Essex.</p>
         </section>
     </main>
     <footer>
-        <p>&copy; 2024 Mustafa Hussein</p>
+        <p>&copy; 2024 Your Name</p>
     </footer>
 </body>
 </html>
-
