--- a/education.html
+++ b/education.html
@@ -22,11 +22,15 @@
     <main>
         <section>
             <h2>Education</h2>
-            <p>Details about your educational background.</p>
+            <p>Currently, I am pursuing a Master in Enterprise IT Management
+BTEC Level 3 NVQ 
+Microsoft 365 (MS-900)
+Diploma in Professional Competence for IT and Telecoms Professionals
+.</p>
         </section>
     </main>
     <footer>
-        <p>&copy; 2024 Your Name</p>
+        <p>&copy; 2024 Mustafa Hussein</p>
     </footer>
 </body>
 </html>
