--- a/education.html
+++ b/education.html
@@ -22,7 +22,8 @@
     <main>
         <section>
             <h2>Education</h2>
-            <p>Currently, I am pursuing a Master in Enterprise IT Management
+            <p>
+Currently, I am pursuing a Master in Enterprise IT Management
 BTEC Level 3 NVQ 
 Microsoft 365 (MS-900)
 Diploma in Professional Competence for IT and Telecoms Professionals
