--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <main>
         <section>
             <h2>Home</h2>
+            <img src="images/profile.jpg" alt="Profile Picture" class="profile-pic">
             <p>Welcome to my e-portfolio! Use the navigation links to explore my work and skills.</p>
         </section>
     </main>
