--- a/University.html
+++ b/University.html
@@ -26,7 +26,7 @@
         </section>
     </main>
     <footer>
-        <p>&copy; 2024 Mustafa Hussein</p>
+        <p>&copy; 2024 Your Name</p>
     </footer>
 </body>
 </html>
