--- a/university.html
+++ b/university.html
@@ -25,6 +25,87 @@
             <p>I am passionate about the intersection of technology and business strategy, which drives my pursuit of a Master’s in Enterprise IT Management. My background has shown me how crucial effective IT management is for optimizing organizational performance and fostering innovation. This program will deepen my knowledge in areas such as IT governance and project management, preparing me to lead and implement technology solutions that align with business goals. I look forward to developing advanced skills and contributing to impactful IT strategies through this advanced degree..</p>
         </section>
     </main>
+    <section>
+            <h2>Module: Launching into Enterprise</h2>
+            <p>Details about the "Launching into Enterprise" module.</p>
+        </section>
+
+        <section>
+            <h2>Module: Security and Risk Management</h2>
+            <h3>Collaborative Discussion Forum Summaries:</h3>
+            <ul>
+                <li>Summaries covering all learning outcomes.</li>
+            </ul>
+            <h3>Outcomes from Team Exercises:</h3>
+            <ul>
+                <li>Documentation showing how team exercises cover learning outcomes 1-4.</li>
+            </ul>
+            <h3>Reflective Piece:</h3>
+            <ul>
+                <li>Reflection covering learning outcomes 1-4.</li>
+            </ul>
+        </section>
+
+        <section>
+            <h2>Module: Information Technology Service Management</h2>
+            <p>Details about the "Information Technology Service Management" module.</p>
+        </section>
+
+        <section>
+            <h2>Module: Enterprise IT Project Management</h2>
+            <p>Details about the "Enterprise IT Project Management" module.</p>
+        </section>
+
+        <section>
+            <h2>Module: Into Data Science</h2>
+            <p>Details about the "Into Data Science" module.</p>
+        </section>
+
+        <section>
+            <h2>Module: Cloud Operations and Management</h2>
+            <p>Details about the "Cloud Operations and Management" module.</p>
+        </section>
+
+        <section>
+            <h2>Module: Research Methods and Professional Practice</h2>
+            <p>Details about the "Research Methods and Professional Practice" module.</p>
+        </section>
+
+        <section>
+            <h2>Module: MSc Computing Project</h2>
+            <p>Details about the "MSc Computing Project" module.</p>
+        </section>
+
+        <section>
+            <h2>Professional Development</h2>
+            <h3>Summary of Learning Outcomes:</h3>
+            <ul>
+                <li>Clear summary explaining how the learning outcomes were met.</li>
+            </ul>
+            <h3>Team Meeting Notes:</h3>
+            <ul>
+                <li>Documentation of team meetings, including dates, attendees, and key points discussed.</li>
+            </ul>
+            <h3>Feedback from Peers and Tutors:</h3>
+            <ul>
+                <li>Include constructive feedback received and your responses or actions taken based on it.</li>
+            </ul>
+            <h3>Professional Skills Matrix and Action Plan (PDP):</h3>
+            <ul>
+                <li>Skills matrix highlighting the skills gained.</li>
+                <li>Action plan for further professional development.</li>
+            </ul>
+            <h3>Additional Artefacts:</h3>
+            <ul>
+                <li>Any other materials developed during the module, with explanations of how they relate to the learning outcomes.</li>
+            </ul>
+        </section>
+    </main>
+    <footer>
+        <p>&copy; 2024 Your Name</p>
+    </footer>
+</body>
+</html>
     <footer>
         <p>&copy; 2024 Mustafa Hussein</p>
     </footer>
