--- a/university.html
+++ b/university.html
@@ -25,12 +25,12 @@
             <p>I am passionate about the intersection of technology and business strategy, which drives my pursuit of a Master’s in Enterprise IT Management. My background has shown me how crucial effective IT management is for optimizing organizational performance and fostering innovation. This program will deepen my knowledge in areas such as IT governance and project management, preparing me to lead and implement technology solutions that align with business goals. I look forward to developing advanced skills and contributing to impactful IT strategies through this advanced degree..</p>
         </section>
     </main>
-    <section>
+      <section id="launching-into-enterprise">
             <h2>Module: Launching into Enterprise</h2>
             <p>Details about the "Launching into Enterprise" module.</p>
         </section>
 
-        <section>
+        <section id="security-and-risk-management">
             <h2>Module: Security and Risk Management</h2>
             <h3>Collaborative Discussion Forum Summaries:</h3>
             <ul>
@@ -46,37 +46,37 @@
             </ul>
         </section>
 
-        <section>
+        <section id="information-technology-service-management">
             <h2>Module: Information Technology Service Management</h2>
             <p>Details about the "Information Technology Service Management" module.</p>
         </section>
 
-        <section>
+        <section id="enterprise-it-project-management">
             <h2>Module: Enterprise IT Project Management</h2>
             <p>Details about the "Enterprise IT Project Management" module.</p>
         </section>
 
-        <section>
+        <section id="into-data-science">
             <h2>Module: Into Data Science</h2>
             <p>Details about the "Into Data Science" module.</p>
         </section>
 
-        <section>
+        <section id="cloud-operations-and-management">
             <h2>Module: Cloud Operations and Management</h2>
             <p>Details about the "Cloud Operations and Management" module.</p>
         </section>
 
-        <section>
+        <section id="research-methods-and-professional-practice">
             <h2>Module: Research Methods and Professional Practice</h2>
             <p>Details about the "Research Methods and Professional Practice" module.</p>
         </section>
 
-        <section>
+        <section id="msc-computing-project">
             <h2>Module: MSc Computing Project</h2>
             <p>Details about the "MSc Computing Project" module.</p>
         </section>
 
-        <section>
+        <section id="professional-development">
             <h2>Professional Development</h2>
             <h3>Summary of Learning Outcomes:</h3>
             <ul>
@@ -101,11 +101,6 @@
             </ul>
         </section>
     </main>
-    <footer>
-        <p>&copy; 2024 Your Name</p>
-    </footer>
-</body>
-</html>
     <footer>
         <p>&copy; 2024 Mustafa Hussein</p>
     </footer>
