--- a/university.html
+++ b/university.html
@@ -25,55 +25,50 @@
             <p>I am passionate about the intersection of technology and business strategy, which drives my pursuit of a Master’s in Enterprise IT Management. My background has shown me how crucial effective IT management is for optimizing organizational performance and fostering innovation. This program will deepen my knowledge in areas such as IT governance and project management, preparing me to lead and implement technology solutions that align with business goals. I look forward to developing advanced skills and contributing to impactful IT strategies through this advanced degree..</p>
         </section>
     </main>
-      <section id="launching-into-enterprise">
-            <h2>Module: Launching into Enterprise</h2>
-            <p>Details about the "Launching into Enterprise" module.</p>
+      <section>
+            <h2>Modules</h2>
+            <ul>
+                <li><a href="#launching-into-enterprise">Launching into Enterprise</a></li>
+                <li><a href="#security-and-risk-management">Security and Risk Management</a></li>
+                <li><a href="#information-technology-service-management">Information Technology Service Management</a></li>
+                <li><a href="#enterprise-it-project-management">Enterprise IT Project Management</a></li>
+                <li><a href="#into-data-science">Into Data Science</a></li>
+                <li><a href="#cloud-operations-and-management">Cloud Operations and Management</a></li>
+                <li><a href="#research-methods-and-professional-practice">Research Methods and Professional Practice</a></li>
+                <li><a href="#msc-computing-project">MSc Computing Project</a></li>
+            </ul>
+        </section>
+
+        <section id="launching-into-enterprise">
+            <iframe src="launching-into-enterprise.html" width="100%" height="600px"></iframe>
         </section>
 
         <section id="security-and-risk-management">
-            <h2>Module: Security and Risk Management</h2>
-            <h3>Collaborative Discussion Forum Summaries:</h3>
-            <ul>
-                <li>Summaries covering all learning outcomes.</li>
-            </ul>
-            <h3>Outcomes from Team Exercises:</h3>
-            <ul>
-                <li>Documentation showing how team exercises cover learning outcomes 1-4.</li>
-            </ul>
-            <h3>Reflective Piece:</h3>
-            <ul>
-                <li>Reflection covering learning outcomes 1-4.</li>
-            </ul>
+            <iframe src="security-and-risk-management.html" width="100%" height="600px"></iframe>
         </section>
 
         <section id="information-technology-service-management">
-            <h2>Module: Information Technology Service Management</h2>
-            <p>Details about the "Information Technology Service Management" module.</p>
+            <iframe src="information-technology-service-management.html" width="100%" height="600px"></iframe>
         </section>
 
         <section id="enterprise-it-project-management">
-            <h2>Module: Enterprise IT Project Management</h2>
-            <p>Details about the "Enterprise IT Project Management" module.</p>
+            <iframe src="enterprise-it-project-management.html" width="100%" height="600px"></iframe>
         </section>
 
         <section id="into-data-science">
-            <h2>Module: Into Data Science</h2>
-            <p>Details about the "Into Data Science" module.</p>
+            <iframe src="into-data-science.html" width="100%" height="600px"></iframe>
         </section>
 
         <section id="cloud-operations-and-management">
-            <h2>Module: Cloud Operations and Management</h2>
-            <p>Details about the "Cloud Operations and Management" module.</p>
+            <iframe src="cloud-operations-and-management.html" width="100%" height="600px"></iframe>
         </section>
 
         <section id="research-methods-and-professional-practice">
-            <h2>Module: Research Methods and Professional Practice</h2>
-            <p>Details about the "Research Methods and Professional Practice" module.</p>
+            <iframe src="research-methods-and-professional-practice.html" width="100%" height="600px"></iframe>
         </section>
 
         <section id="msc-computing-project">
-            <h2>Module: MSc Computing Project</h2>
-            <p>Details about the "MSc Computing Project" module.</p>
+            <iframe src="msc-computing-project.html" width="100%" height="600px"></iframe>
         </section>
 
         <section id="professional-development">
@@ -102,7 +97,7 @@
         </section>
     </main>
     <footer>
-        <p>&copy; 2024 Mustafa Hussein</p>
+        <p>&copy; 2024 Your Name</p>
     </footer>
 </body>
 </html>
