--- a/enterprise-IT-Project-Management.html
+++ b/enterprise-IT-Project-Management.html
@@ -1,7 +1,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Launching into Enterprise</title>
+    <title>Enterprise IT Project Management</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
