--- a/enterprise-it-project-management.html
+++ b/enterprise-it-project-management.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <section>
-1.	        <h2> Module: Enterprise IT Project Management</h2>
+        <h2> Module: Enterprise IT Project Management</h2>
         <p>Details about the " Enterprise IT Project Management " module.</p>
     </section>
 </body>
