--- a/university.html
+++ b/university.html
@@ -21,11 +21,6 @@
     </header>
     <main>
         <section>
-            <h2>University of Essex</h2>
-            <p>I am passionate about the intersection of technology and business strategy, which drives my pursuit of a Master’s in Enterprise IT Management. My background has shown me how crucial effective IT management is for optimizing organizational performance and fostering innovation. This program will deepen my knowledge in areas such as IT governance and project management, preparing me to lead and implement technology solutions that align with business goals. I look forward to developing advanced skills and contributing to impactful IT strategies through this advanced degree..</p>
-        </section>
-    </main>
-      <section>
             <h2>Modules</h2>
             <ul>
                 <li><a href="#launching-into-enterprise">Launching into Enterprise</a></li>
@@ -97,7 +92,7 @@
         </section>
     </main>
     <footer>
-        <p>&copy; 2024 Your Name</p>
+        <p>&copy; 2024 Mustafa Hussein</p>
     </footer>
 </body>
 </html>
