--- a/university.html
+++ b/university.html
@@ -23,71 +23,14 @@
         <section>
             <h2>Modules</h2>
             <ul>
-                <li><a href="#launching-into-enterprise">Launching into Enterprise</a></li>
-                <li><a href="#security-and-risk-management">Security and Risk Management</a></li>
-                <li><a href="#information-technology-service-management">Information Technology Service Management</a></li>
-                <li><a href="#enterprise-it-project-management">Enterprise IT Project Management</a></li>
-                <li><a href="#into-data-science">Into Data Science</a></li>
-                <li><a href="#cloud-operations-and-management">Cloud Operations and Management</a></li>
-                <li><a href="#research-methods-and-professional-practice">Research Methods and Professional Practice</a></li>
-                <li><a href="#msc-computing-project">MSc Computing Project</a></li>
-            </ul>
-        </section>
-
-        <section id="launching-into-enterprise">
-            <iframe src="launching-into-enterprise.html" width="100%" height="600px"></iframe>
-        </section>
-
-        <section id="security-and-risk-management">
-            <iframe src="security-and-risk-management.html" width="100%" height="600px"></iframe>
-        </section>
-
-        <section id="information-technology-service-management">
-            <iframe src="information-technology-service-management.html" width="100%" height="600px"></iframe>
-        </section>
-
-        <section id="enterprise-it-project-management">
-            <iframe src="enterprise-it-project-management.html" width="100%" height="600px"></iframe>
-        </section>
-
-        <section id="into-data-science">
-            <iframe src="into-data-science.html" width="100%" height="600px"></iframe>
-        </section>
-
-        <section id="cloud-operations-and-management">
-            <iframe src="cloud-operations-and-management.html" width="100%" height="600px"></iframe>
-        </section>
-
-        <section id="research-methods-and-professional-practice">
-            <iframe src="research-methods-and-professional-practice.html" width="100%" height="600px"></iframe>
-        </section>
-
-        <section id="msc-computing-project">
-            <iframe src="msc-computing-project.html" width="100%" height="600px"></iframe>
-        </section>
-
-        <section id="professional-development">
-            <h2>Professional Development</h2>
-            <h3>Summary of Learning Outcomes:</h3>
-            <ul>
-                <li>Clear summary explaining how the learning outcomes were met.</li>
-            </ul>
-            <h3>Team Meeting Notes:</h3>
-            <ul>
-                <li>Documentation of team meetings, including dates, attendees, and key points discussed.</li>
-            </ul>
-            <h3>Feedback from Peers and Tutors:</h3>
-            <ul>
-                <li>Include constructive feedback received and your responses or actions taken based on it.</li>
-            </ul>
-            <h3>Professional Skills Matrix and Action Plan (PDP):</h3>
-            <ul>
-                <li>Skills matrix highlighting the skills gained.</li>
-                <li>Action plan for further professional development.</li>
-            </ul>
-            <h3>Additional Artefacts:</h3>
-            <ul>
-                <li>Any other materials developed during the module, with explanations of how they relate to the learning outcomes.</li>
+                <li><a href="launching-into-enterprise.html">Launching into Enterprise</a></li>
+                <li><a href="security-and-risk-management.html">Security and Risk Management</a></li>
+                <li><a href="information-technology-service-management.html">Information Technology Service Management</a></li>
+                <li><a href="enterprise-it-project-management.html">Enterprise IT Project Management</a></li>
+                <li><a href="into-data-science.html">Into Data Science</a></li>
+                <li><a href="cloud-operations-and-management.html">Cloud Operations and Management</a></li>
+                <li><a href="research-methods-and-professional-practice.html">Research Methods and Professional Practice</a></li>
+                <li><a href="msc-computing-project.html">MSc Computing Project</a></li>
             </ul>
         </section>
     </main>
