--- a/about.html
+++ b/about.html
@@ -22,7 +22,7 @@
     <main>
         <section>
             <h2>About Me</h2>
-            <img src="images/profile.jpg" alt="Profile Picture" class="profile-pic">
+            <img src="assets/Profile.jpg" alt="Profile Picture" class="profile-pic">
             <p>I am an IT Project Manager with nine years of hands-on experience in the computing industry, bringing a wealth of expertise in problem-solving, reliability, and efficiency. My proficiency in resolving complex issues and communicating procedures in an accessible manner is well-documented. I excel both independently and within team settings, consistently delivering high-quality IT services.
 Professional Experience
 My expertise encompasses IT infrastructure management, hardware and software troubleshooting, and computer system maintenance. Volunteering with the Refugee Council further demonstrates my self-motivation and capacity to operate effectively in diverse environments.
