--- a/launching-into-enterprise.html
+++ b/launching-into-enterprise.html
@@ -7,8 +7,15 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <header>
+        <h1>Module: Launching into Enterprise</h1>
+        <nav>
+            <ul>
+                <li><a href="university.html">Back to University of Essex</a></li>
+            </ul>
+        </nav>
+    </header>
     <section>
-        <h2>Module: Launching into Enterprise</h2>
         <p>Details about the "Launching into Enterprise" module.</p>
     </section>
 </body>
