--- a/security-and-risk-management.html
+++ b/security-and-risk-management.html
@@ -7,8 +7,15 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <header>
+        <h1>Module: Security and Risk Management</h1>
+        <nav>
+            <ul>
+                <li><a href="university.html">Back to University of Essex</a></li>
+            </ul>
+        </nav>
+    </header>
     <section>
-        <h2>Module: Security and Risk Management</h2>
         <h3>Collaborative Discussion Forum Summaries:</h3>
         <ul>
             <li>Summaries covering all learning outcomes.</li>
