--- a/enterprise-it-project-management.html
+++ b/enterprise-it-project-management.html
@@ -5,6 +5,14 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <header>
+        <h1>Module: Security and Risk Management</h1>
+        <nav>
+            <ul>
+                <li><a href="university.html">Back to University of Essex</a></li>
+            </ul>
+        </nav>
+    </header>
     <section>
         <h2> Module: Enterprise IT Project Management</h2>
         <p>Details about the " Enterprise IT Project Management " module.</p>
