--- a/into-data-science.html
+++ b/into-data-science.html
@@ -1,13 +1,23 @@
+<!DOCTYPE html>
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> Into Data Science title>
+    <title>Into Data Science</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <header>
+        <h1>Module: Security and Risk Management</h1>
+        <nav>
+            <ul>
+                <li><a href="university.html">Back to University of Essex</a></li>
+            </ul>
+        </nav>
+    </header>
     <section>
-        <h2> Module: Into Data Science</h2>
-        <p>Details about the " Into Data Science" module.</p>
+        <h2>Module: Into Data Science</h2>
+        <p>Details about the "Into Data Science.</p>
     </section>
 </body>
 </html>
