--- a/university.html
+++ b/university.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>University of Essex</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="custom-style.css"> <!-- Add this line -->
 </head>
 <body>
     <header>
