--- a/security-and-risk-management.html
+++ b/security-and-risk-management.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Security and Risk Management</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="custom-style.css"> <!-- Add this line -->
 </head>
 <body>
     <header>
