--- a/education.html
+++ b/education.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Education</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="custom-style.css"> <!-- Link to the custom CSS file -->
 </head>
 <body>
     <header>
