--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My E-Portfolio</title>
+    <title>My Portfolio</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="custom-style.css"> <!-- Link to the custom CSS file -->
 </head>
 <body>
     <header>
-        <h1>Welcome to My E-Portfolio</h1>
+        <h1>Welcome to My Portfolio</h1>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
@@ -22,13 +22,12 @@
     </header>
     <main>
         <section>
-            <h2>Home</h2>
-            <img src="assets/Profile.jpg" alt="Profile Picture" class="profile-pic">
-            <p>Welcome to my e-portfolio! Use the navigation links to explore my work and skills.</p>
+            <h2>Welcome</h2>
+            <p>This is the home page of my e-portfolio.</p>
         </section>
     </main>
     <footer>
-        <p>&copy; 2024 Mustafa Hussein</p>
+        <p>&copy; 2024 Your Name</p>
     </footer>
 </body>
 </html>
