--- a/security-and-risk-management.html
+++ b/security-and-risk-management.html
@@ -8,7 +8,12 @@
 </head>
 <body>
     <header>
-        <h1>Module: Security and Risk Management</h1>
+        <h1>Module: Security and Risk Management
+-Identify and analyse critically security risks, threats and vulnerabilities in information systems, accounting for the current threat landscape.
+-Gather and synthesise information from multiple sources (including internet security alerts & warning sites) to aid in the systematic analysis of risks & security issues manage and audit risk & security issues.
+-Critically determine appropriate methodologies, tools and techniques to mitigate and/or solve security risks and their business impact.
+-Articulate the legal, social, ethical, and professional issues faced by information security and risk professionals.
+</h1>
         <nav>
             <ul>
                 <li><a href="university.html">Back to University of Essex</a></li>
