--- a/security-and-risk-management.html
+++ b/security-and-risk-management.html
@@ -5,30 +5,48 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Security and Risk Management</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="custom-style.css"> <!-- Link to the custom CSS file -->
 </head>
 <body>
     <header>
-        <h1>Module: Security and Risk Management</h1>
+        <h1>Security and Risk Management</h1>
         <nav>
             <ul>
-                <li><a href="university.html">Back to University of Essex</a></li>
+                <li><a href="university.html">Back to University Home</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About Me</a></li>
+                <li><a href="education.html">Education</a></li>
+                <li><a href="cv.html">CV</a></li>
             </ul>
         </nav>
     </header>
-    <section>
-        <h3> Unit 1 Formative Assessment: Collaborative Learning Discussion 1
-:</h3>
-        <ul>
-            <li>Summaries covering all learning outcomes.</li>
-        </ul>
-        <h3>Outcomes from Team Exercises:</h3>
-        <ul>
-            <li>Documentation showing how team exercises cover learning outcomes 1-4.</li>
-        </ul>
-        <h3>Reflective Piece:</h3>
-        <ul>
-            <li>Reflection covering learning outcomes 1-4.</li>
-        </ul>
-    </section>
+
+    <main>
+        <section>
+            <h2>Module Aims:</h2>
+            <ul>
+                <li>Identify and analyse critically security risks, threats and vulnerabilities in information systems, accounting for the current threat landscape.</li>
+                <li>Gather and synthesise information from multiple sources (including internet security alerts & warning sites) to aid in the systematic analysis of risks & security issues manage and audit risk & security issues.</li>
+                <li>Critically determine appropriate methodologies, tools and techniques to mitigate and/or solve security risks and their business impact.</li>
+                <li>Articulate the legal, social, ethical, and professional issues faced by information security and risk professionals.</li>
+            </ul>
+        </section>
+
+        <section>
+            <h3>Units</h3>
+            <ul>
+                <li><a href="unit1.html">Unit 1</a></li>
+                <li><a href="unit2.html">Unit 2</a></li>
+                <li><a href="unit3.html">Unit 3</a></li>
+                <li><a href="unit4.html">Unit 4</a></li>
+                <li><a href="unit5.html">Unit 5</a></li>
+                <li><a href="unit6.html">Unit 6</a></li>
+            </ul>
+        </section>
+    </main>
+
+    <footer>
+        <p>&copy; 2024 Mustafa Hussein</p>
+    </footer>
 </body>
 </html>
