--- a/security-and-risk-management.html
+++ b/security-and-risk-management.html
@@ -41,6 +41,12 @@
                 <li><a href="unit4.html">Unit 4</a></li>
                 <li><a href="unit5.html">Unit 5</a></li>
                 <li><a href="unit6.html">Unit 6</a></li>
+                <li><a href="unit7.html">Unit 6</a></li>
+                <li><a href="unit8.html">Unit 6</a></li>
+                <li><a href="unit9.html">Unit 6</a></li>
+                <li><a href="unit10.html">Unit 6</a></li>
+                <li><a href="unit11.html">Unit 6</a></li>
+                <li><a href="unit12.html">Unit 6</a></li>
             </ul>
         </section>
     </main>
