--- a/launching-into-enterprise.html
+++ b/launching-into-enterprise.html
@@ -5,18 +5,58 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Launching into Enterprise</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="custom-style.css"> <!-- Link to the custom CSS file -->
 </head>
 <body>
     <header>
-        <h1>Module: Launching into Enterprise</h1>
+        <h1>Launching into Enterprise</h1>
         <nav>
             <ul>
-                <li><a href="university.html">Back to University of Essex</a></li>
+                <li><a href="university.html">Back to University Home</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About Me</a></li>
+                <li><a href="education.html">Education</a></li>
+                <li><a href="cv.html">CV</a></li>
             </ul>
         </nav>
     </header>
-    <section>
-        <p>Details about the "Launching into Enterprise" module.</p>
-    </section>
+
+    <main>
+        <section>
+            <h2>Module Content:</h2>
+            <ul>
+                <li>An Introduction to Enterprise IT</li>
+                <li>Enterprise IT vs. Shadow IT</li>
+                <li>Enterprise IT and Automation</li>
+                <li>A Comparative Study: Practical Automation Exercises using C and Python</li>
+                <li>Business Systems, Outsourcing and the Cloud</li>
+                <li>A Cost Comparison Between On-premise, Private and Public Cloud Hosting</li>
+                <li>Software Licensing: Commercial vs. Open Source</li>
+                <li>A Case Study: Investigating Business and Technical Innovations of Large Corporations and SMEs</li>
+                <li>Communications and Digital Transformation</li>
+                <li>The Digital Transformation Process</li>
+                <li>Future Trends</li>
+                <li>The Great Debate</li>
+            </ul>
+        </section>
+
+        <section>
+            <h2>Projects:</h2>
+            <ul>
+                <li>"The adoption of Enterprise IT is the single most significant change that can happen to any company/SME". <strong>Grade:</strong> [Merit]</li>
+                <li>Create a Sort Algorithm in Python: Modify a simple Python program to replace the basic sort algorithm with one of your choice to sort a provided set of integers. <strong>Grade:</strong> [Merit]</li>
+                <li>Develop a PowerPoint Presentation on Future Technology: Create a 10-slide presentation and a 20-minute recorded reflection (with transcript) on future technology/techniques and learning styles. <strong>Grade:</strong> [Pass]</li>
+            </ul>
+        </section>
+
+        <section>
+            <h2>Overall Grade:</h2>
+            <p><strong>Overall Grade:</strong> [Merit]</p>
+        </section>
+    </main>
+
+    <footer>
+        <p>&copy; 2024 Mustafa Hussein</p>
+    </footer>
 </body>
 </html>
