--- a/launching-into-enterprise.html
+++ b/launching-into-enterprise.html
@@ -43,9 +43,9 @@
         <section>
             <h2>Projects:</h2>
             <ul>
-                <li>1- The adoption of Enterprise IT is the single most significant change that can happen to any company/SME". <strong>Grade:</strong> [Merit]</li>
-                <li>2- Create a Sort Algorithm in Python: Modify a simple Python program to replace the basic sort algorithm with one of your choice to sort a provided set of integers. <strong>Grade:</strong> [Merit]</li>
-                <li>3- Develop a PowerPoint Presentation on Future Technology: Create a 10-slide presentation and a 20-minute recorded reflection (with transcript) on future technology/techniques and learning styles. <strong>Grade:</strong> [Pass]</li>
+                <li>The adoption of Enterprise IT is the single most significant change that can happen to any company/SME". <strong>Grade:</strong> [Merit]</li>
+                <li>Create a Sort Algorithm in Python: Modify a simple Python program to replace the basic sort algorithm with one of your choice to sort a provided set of integers. <strong>Grade:</strong> [Merit]</li>
+                <li>Develop a PowerPoint Presentation on Future Technology: Create a 10-slide presentation and a 20-minute recorded reflection (with transcript) on future technology/techniques and learning styles. <strong>Grade:</strong> [Pass]</li>
             </ul>
         </section>
 
