--- a/index.html
+++ b/index.html
@@ -3,29 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Example Page</title>
+    <title>My E-Portfolio</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="custom-style.css"> <!-- Link to the custom CSS file -->
 </head>
 <body>
     <header>
-        <h1>Page Title</h1>
+        <h1>Welcome to My E-Portfolio</h1>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About Me</a></li>
+                <li><a href="university.html">University of Essex</a></li>
                 <li><a href="education.html">Education</a></li>
                 <li><a href="cv.html">CV</a></li>
             </ul>
         </nav>
     </header>
-
     <main>
         <section>
-            <h2>Section Title</h2>
-            <p>This is a paragraph with custom text color.</p>
+            <h2>Home</h2>
+            <img src="assets/Profile.jpg" alt="Profile Picture" class="profile-pic">
+            <p>Welcome to my e-portfolio! Use the navigation links to explore my work and skills.</p>
         </section>
     </main>
-
     <footer>
         <p>&copy; 2024 Mustafa Hussein</p>
     </footer>
