--- a/Security&RiskManagement/security-and-risk-management.html
+++ b/Security&RiskManagement/security-and-risk-management.html
@@ -1,1 +1,58 @@
 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Security and Risk Management</title>
+    <link rel="stylesheet" href="../css/styles.css">
+</head>
+<body>
+    <header>
+        <h1>Security and Risk Management</h1>
+        <nav>
+            <ul>
+                <li><a href="university.html">Back to University Home</a></li>
+                <li><a href="../index.html">Home</a></li>
+                <li><a href="../about.html">About Me</a></li>
+                <li><a href="../education.html">Education</a></li>
+                <li><a href="../cv.html">CV</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <main>
+        <section>
+            <h2>Module Aims:</h2>
+            <ul>
+                <li>Identify and analyse critically security risks, threats, and vulnerabilities in information systems...</li>
+                <li>Gather and synthesise information from multiple sources...</li>
+                <li>Critically determine appropriate methodologies...</li>
+                <li>Articulate the legal, social, ethical, and professional issues...</li>
+            </ul>
+        </section>
+
+        <section>
+            <h2>Units</h2>
+            <ul>
+                <li><a href="unit1.html">Unit 1</a></li>
+                <li><a href="unit2.html">Unit 2</a></li>
+                <li><a href="unit3.html">Unit 3</a></li>
+                <li><a href="unit4.html">Unit 4</a></li>
+                <li><a href="unit5.html">Unit 5</a></li>
+                <li><a href="unit6.html">Unit 6</a></li>
+                <li><a href="unit7.html">Unit 7</a></li>
+                <li><a href="unit8.html">Unit 8</a></li>
+                <li><a href="unit9.html">Unit 9</a></li>
+                <li><a href="unit10.html">Unit 10</a></li>
+                <li><a href="unit11.html">Unit 11</a></li>
+                <li><a href="unit12.html">Unit 12</a></li>
+            </ul>
+        </section>
+    </main>
+
+    <footer>
+        <p>&copy; 2024 Mustafa Hussein</p>
+    </footer>
+</body>
+</html>
