--- a/index.html
+++ b/index.html
@@ -4,31 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My E-Portfolio</title>
-    <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="custom-style.css"> <!-- Link to the custom CSS file -->
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
     <header>
         <h1>Welcome to My E-Portfolio</h1>
         <nav>
             <ul>
-                <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About Me</a></li>
-                <li><a href="university.html">University of Essex</a></li>
-                <li><a href="education.html">Education</a></li>
                 <li><a href="cv.html">CV</a></li>
+                <li><a href="education.html">Education</a></li>
+                <li><a href="university/security-and-risk-management/security-and-risk-management.html">University</a></li>
             </ul>
         </nav>
     </header>
     <main>
-        <section>
-            <h2>Home</h2>
-            <img src="assets/Profile.jpg" alt="Profile Picture" class="profile-pic">
-            <p>Welcome to my e-portfolio! Use the navigation links to explore my work and skills.</p>
-        </section>
+        <p>This is the home page of my e-portfolio.</p>
     </main>
     <footer>
-        <p>&copy; 2024 Mustafa Hussein</p>
+        <p>&copy; 2024 Your Name</p>
     </footer>
 </body>
 </html>
